deploy/k8s/analytodon.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: analytodon
    namespace: analytodon
spec:
    replicas: 2
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 0
            maxUnavailable: 1
    selector:
        matchLabels:
            app: analytodon
    template:
        metadata:
            labels:
                app: analytodon
        spec:
            affinity:
                nodeAffinity:
                    preferredDuringSchedulingIgnoredDuringExecution:
                        - weight: 1
                          preference:
                              matchExpressions:
                                  - key: project
                                    operator: In
                                    values:
                                        - analytodon
            containers:
                - name: makler-lii
                  image: productionbuild/analytodon:latest
                  imagePullPolicy: Always
                  securityContext:
                      allowPrivilegeEscalation: false
                      capabilities:
                          drop:
                              - ALL
                  ports:
                      - name: http
                        containerPort: 80
                  startupProbe:
                      failureThreshold: 120
                      httpGet:
                          path: /
                          port: http
                  readinessProbe:
                      httpGet:
                          path: /login
                          port: http
---
apiVersion: v1
kind: Service
metadata:
    name: analytodon
    namespace: analytodon
spec:
    selector:
        app: analytodon
    ports:
        - port: 80
          targetPort: http
    type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: analytodon-ingress
    namespace: analytodon
    annotations:
        kubernetes.io/ingress.class: nginx
        cert-manager.io/cluster-issuer: letsencrypt
spec:
    tls:
        - hosts:
              - app.analytodon.com
          secretName: letsencrypt-analytodon-tls
    rules:
        - host: 'app.analytodon.com'
          http:
              paths:
                  - pathType: Prefix
                    path: '/'
                    backend:
                        service:
                            name: analytodon
                            port:
                                number: 80
