deploy/k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytodon-frontend
  namespace: analytodon2
spec:
  selector:
    matchLabels:
      app: analytodon-frontend
  template:
    metadata:
      labels:
        app: analytodon-frontend
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: github-packages
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: project
                    operator: In
                    values:
                      - default
      containers:
        - name: analytodon-frontend
          image: ghcr.io/blazer82/analytodon-frontend:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: admin-port
              containerPort: 3000
          startupProbe:
            failureThreshold: 120
            httpGet:
              path: /login
              port: admin-port
          readinessProbe:
            httpGet:
              path: /login
              port: admin-port
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: analytodon-frontend
  namespace: analytodon2
spec:
  ports:
    - port: 80
      targetPort: admin-port
      protocol: TCP
  type: NodePort
  selector:
    app: analytodon-frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytodon-frontend-ingress
  namespace: analytodon2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - beta.analytodon.com
      secretName: letsencrypt-analytodon-tls
  rules:
    - host: beta.analytodon.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: analytodon-frontend
                port:
                  number: 80
